--- a/src/containers/css/App.css
+++ b/src/containers/css/App.css
@@ -7,6 +7,40 @@
   justify-content: center;
 }
 
+.extendedCard {
+  width: 50%;
+  height: 300px;
+  background-color: aliceblue;
+  outline: 1px solid transparent;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.05);
+}
+
+.overlayButton {
+  position: fixed;
+}
+
+.growComponent-appear {
+  transform: scale(0);
+}
+
+.growComponent-enter {
+  transform: scale(0);
+}
+
+.growComponent-enter-done {
+  transform: scale(1);
+  transition: all 0.5s;
+}
+
+.growComponent-exit {
+  transform: scale(1);
+}
+
+.growComponent-exit-active {
+  transform: scale(0);
+  transition: all 0.5s;
+}
+
 footer {
   display: grid;
   grid-gap: 1.5rem;
@@ -43,19 +77,114 @@ a {
   text-shadow: 3px 3px rgba(0,0,0,0.4);
 }
 
+.Card:hover {
+  transform: scale(1.05);
+  transition: all 0.3s;
+}
+
 .Cards {
   margin-bottom: 15vh;
   margin-top: 3vh;
-  display: grid;
-  grid-gap: 1.5rem;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 200px));
-  grid-template-rows: 1fr;
+  display: flex;
   justify-content: center;
 }
 
-@media(max-width:540px) {
-  .Cards {
-    display: grid;
-    grid-template-columns: repeat(1, minmax(200px, 200px));
+.Card {
+  width: 200px;
+  transform: scale(1);
+  transition: all 0.3s;
+}
+
+.Card-Expand {
+  width: 700px;
+  max-height: 500px;
+  
+  transition: all 0.5s;
+}
+
+.pokemonIcon {
+  max-width: 23%;
+  min-width: 150px;
+  max-height: 200px;
+  transition: all 0.5s;
+}
+
+.infoText-Expand {
+  animation-delay: 1s;
+  display: grid;
+  margin-left: 50%;
+  transform: translateY(-200px);
+  text-align: center;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-column-gap: 10px;
+}
+
+.pokemonIcon-ShiftLeft {
+  margin-right: 0px;
+  transform: translate(-30%, 20px);
+  transition: all 0.5s;
+}
+
+.pokemonIcon-ShiftCenter {
+  min-width: 100px;
+  transform: translate(0px, 0px);
+  transition: all 0.5s;
+}
+
+.extendCardButton {
+  background-color: transparent;
+  outline: none;
+  border-color: transparent;
+  font-style: italic;
+  font-size: 1.5em;
+  cursor: pointer;
+}
+
+.green {
+  color: rgb(47, 179, 47);
+}
+.blue {
+  color: rgb(62, 184, 255);
+}
+.yellow {
+  color: rgb(196, 184, 27);
+}
+.darkBlue {
+  color: rgb(0, 60, 255);
+}
+.purple {
+  color: rgb(192, 11, 192);
+}
+.darkPurple {
+  color: rgb(136, 25, 136);
+}
+.textShadow {
+  text-shadow: rgba(0, 0, 0, 0.596) 0px 2px 3px;
+}
+.extendCardButton-Expand {
+  transform: translate(-250px, -250px);
+}
+
+.searchBox {
+  margin-top: 10rem;
+}
+
+@media(max-width:767px) {
+  .Card-Expand {
+    position: relative;
+    width: 300px;
+    max-height: 900px;
+  }
+  .pokemonIcon {
+    min-width: 100px;
+  }
+  .infoText-Expand {
+    margin-top: 50px;
+  }
+  .extendCardButton-Expand {
+    transform: translate(-60px, -650px);
+  }
+  .searchBox {
+    margin-top: 3rem;
   }
 }
